[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "raclib"
version = "1.1.0"
description = "Библиотека на языке Python, которая позволяет взаимодействовать с сервером администрирования 1С через утилиту RAC, предоставляя соответствующие сущности."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
    { name = "bqio", email = "dmitry.mikhaltsov98@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/bqio/raclib"
Repository = "https://github.com/bqio/raclib"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]